@@ -227,10 +227,18 @@ $wgLanguageNamesEn =& $wgLanguageNames;
 	MAG_PAGENAMEE            => array( 1,    'PAGENAMEE'              ),
 	MAG_NAMESPACE            => array( 1,    'NAMESPACE'              ),
 	MAG_NAMESPACEE           => array( 1,    'NAMESPACEE'             ),
+	MAG_TALKSPACE			 => array( 1, 	 'TALKSPACE'			  ),
+	MAG_TALKSPACEE			 => array( 1,	 'TALKSPACEE'			  ),
+	MAG_SUBJECTSPACE		 => array( 1, 	 'SUBJECTSPACE', 'ARTICLESPACE' ),
+	MAG_SUBJECTSPACEE		 => array( 1,	 'SUBJECTSPACEE', 'ARTICLESPACEE' ),
 	MAG_FULLPAGENAME         => array( 1,    'FULLPAGENAME'           ),
 	MAG_FULLPAGENAMEE        => array( 1,    'FULLPAGENAMEE'          ),
-	MAG_SUBPAGENAME	         => array( 0,	 'SUBPAGENAME'		  	  ),
-	MAG_SUBPAGENAMEE		 => array( 0, 	 'SUBPAGENAMEE'			  ),
+	MAG_SUBPAGENAME	         => array( 1,	 'SUBPAGENAME'		  	  ),
+	MAG_SUBPAGENAMEE		 => array( 1, 	 'SUBPAGENAMEE'			  ),
+	MAG_TALKPAGENAME		 => array( 1, 	 'TALKPAGENAME'			  ),
+	MAG_TALKPAGENAMEE		 => array( 1,	 'TALKPAGENAMEE'		  ),
+	MAG_SUBJECTPAGENAME		 => array( 1, 	 'SUBJECTPAGENAME', 'ARTICLEPAGENAME' ),
+	MAG_SUBJECTPAGENAMEE	 => array( 1, 	 'SUBJECTPAGENAMEE', 'ARTICLEPAGENAMEE' ),
 	MAG_MSG                  => array( 0,    'MSG:'                   ),
 	MAG_SUBST                => array( 0,    'SUBST:'                 ),
 	MAG_MSGNW                => array( 0,    'MSGNW:'                 ),
