@@ -57,6 +57,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   All extensions using it have been corrected.
 * Propagate ISBN number for Booksources in LanguageNo.php
 * (bug 5548) Improvements to Indonesian localisation [patch: Ivan Lanin]
+* Add TALKSPACE, SUBJECTSPACE, TALKPAGENAME, SUBJECTPAGENAME (and encoded forms for all)
+  magic words
 
 == Compatibility ==
 
